--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "hyper-fahrenheit"
 version = "0.1.0"
 authors = ["Alexander Polakov <a.polakov@iconic.vc>"]
 edition = "2018"
+description = "Fahrenheit adapter for hyper"
+license = "MIT"
+documentation = "https://docs.rs/hyper-fahrenheit"
+repository = "https://github.com/polachok/hyper-fahrenheit"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
